kube-infra/kustomize/demo/argo-rollouts/overlays/production/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-stable
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: "true"
    #kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: letsencrypt-dev-aws
spec:
  # tls:
  # - hosts:
  #     - "*.bradmccoy.io"
  #   secretName: canary-demo
  rules:
  #- host: canary.bradmccoy.io
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-stable
            port:
              number: 80
