kube-infra/kustomize/demo/argo-rollouts/overlays/production/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dev-aws
spec:
  tls:
  - hosts:
      - "*.bradmccoy.io"
    secretName: canary-demo-preview
  rules:
  - host: canary-preview.bradmccoy.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: canary-demo-preview
            port:
              number: 80
